--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -701,7 +701,7 @@ dt {
   height: 60px;
   width: 100%;
   position: fixed;
-  background: url(../images/nav-bg.gif) #8a8;
+  background: url(../images/nav-bg.gif) #333;
   border-bottom: 4px solid #434343;
   -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
@@ -712,7 +712,7 @@ dt {
   max-width: 650px;
   margin: 0 auto;
   padding: 0 10px;
-  background: blue;
+  background: #8a8;
   margin: 6px auto;
 }
 #header nav li {
